マーカー名称変更

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a-scene embedded arjs="debugUIEnabled: false" vr-mode-ui="enabled: false">
     <a-assets>
       <!-- 画像をプリロード -->
-      <img id="kinga_sinnen" src="images/.png">
+      <img id="kinga_sinnen" src="seihoukei.png">
     </a-assets>
     <!-- a-markerのtypeにpatternを設定, 作ったpattファイルをurlにを指定 -->
     <a-marker type="pattern" url="pattern-marker1.patt">
