--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <a-scene embedded arjs="debugUIEnabled: false" vr-mode-ui="enabled: false">
     <a-assets>
       <!-- 画像をプリロード -->
-      <img id="kinga_sinnen" src="seihoukei.png">
+      <img id="kinga_sinnen" src="jfydtuss.png">
     </a-assets>
     <!-- a-markerのtypeにpatternを設定, 作ったpattファイルをurlにを指定 -->
-    <a-marker type="pattern" url="pattern-marker1.patt">
+    <a-marker type="pattern" url="pattern-marker.patt">
       <!-- 赤い立方体を表示 -->
       <a-box position="0 0.5 0" width="0.5" height="0.5" depth="0.5" color="red"></a-box>
       <a-entity>
@@ -23,7 +23,7 @@
         <a-image src="#kinga_sinnen" width="2" height="2" rotation="-90 0 0"></a-image>
         <!-- a-imageを内包するa-entityをy軸周りで360度回転するアニメーション -->
         <!-- dur(間隔):4000(ms), repeat(繰り返し):止めない限り無限, easing(イージング):線形(イージングしない)-->
-        <a-animation attribute="rotation" to="0 360 0" dur="1000" repeat="indefinite" easing="linear"></a-animation>
+        <a-animation attribute="rotation" to="0 360 0" dur="4000" repeat="indefinite" easing="linear"></a-animation>
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
