--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       
       <a-entity>
         <!-- idを指定して画像を表示、x軸回りで-90度回転 -->
-        <a-image src="#kinga_sinnen" position="5 0 " width="2" height="2" rotation="-90 0 0"></a-image>
+        <a-image src="#kinga_sinnen" position="1 0 3" width="2" height="2" rotation="-90 0 0"></a-image>
         <!-- a-imageを内包するa-entityをy軸周りで360度回転するアニメーション -->
         <!-- dur(間隔):4000(ms), repeat(繰り返し):止めない限り無限, easing(イージング):線形(イージングしない)-->
         
