#を追加変更

--- a/t7s6th/index.html
+++ b/t7s6th/index.html
@@ -12,8 +12,8 @@
   <a-scene embedded arjs="debugUIEnabled: false" vr-mode-ui="enabled: false">
     <a-assets>
       <!-- 画像をプリロード -->
-      <img id="haru" src="mainharu.png">
-      <img id="niko" src="mainniko.png">
+      <img id="#haru" src="mainharu.png">
+      <img id="#niko" src="mainniko.png">
     </a-assets>
     <!-- a-markerのtypeにpatternを設定, 作ったpattファイルをurlにを指定 -->
     <a-marker type="pattern" url="pattern-marker.patt">
