--- a/t7s6th/index.html
+++ b/t7s6th/index.html
@@ -12,8 +12,8 @@
   <a-scene embedded arjs="debugUIEnabled: false" vr-mode-ui="enabled: false">
     <a-assets>
       <!-- 画像をプリロード -->
-      <img id="#haru" src="mainharu.png">
-      <img id="#niko" src="mainniko.png">
+      <img id="haru" src="mainharu.png">
+      <img id="niko" src="mainniko.png">
     </a-assets>
     <!-- a-markerのtypeにpatternを設定, 作ったpattファイルをurlにを指定 -->
     <a-marker type="pattern" url="pattern-marker.patt">
@@ -21,8 +21,8 @@
       
       <a-entity>
         <!-- idを指定して画像を表示、x軸回りで-90度回転 -->
-        <a-image src="haru" position="0 0 0.8" width="2" height="2" rotation="-90 0 0"></a-image>
-        <a-image src="niko" position="0 0 0.5" width="2" height="2" rotation="-90 0 0"></a-image>
+        <a-image src="#haru" position="0 0 0.8" width="2" height="2" rotation="-90 0 0"></a-image>
+        <a-image src="#niko" position="0 0 0.5" width="2" height="2" rotation="-90 0 0"></a-image>
         <!-- a-imageを内包するa-entityをy軸周りで360度回転するアニメーション -->
         <!-- dur(間隔):4000(ms), repeat(繰り返し):止めない限り無限, easing(イージング):線形(イージングしない)-->
         
