--- a/t7s6th/index.html
+++ b/t7s6th/index.html
@@ -20,9 +20,9 @@
       <!-- 赤い立方体を表示 -->
       
       <a-entity>
-        <!-- idを指定して画像を表示、x軸回りで-90度回転 -->
-        <a-image src="#haru" position="0 0.5 1.5" width="2" height="2" rotation="-90 0 0"></a-image>
-        <a-image src="#niko" position="0 0.5 1.5" width="2" height="2" rotation="-90 0 0"></a-image>
+        <!-- idを指定して画像を表示、positionは（X軸　Z軸　Y軸）x軸回りで-90度回転 -->
+        <a-image src="#haru" position="0 0.5 0.5" width="2" height="2" rotation="-90 0 0"></a-image>
+        <a-image src="#niko" position="0 0.5 0.5" width="2" height="2" rotation="-90 0 0"></a-image>
         <!-- a-imageを内包するa-entityをy軸周りで360度回転するアニメーション -->
         <!-- dur(間隔):4000(ms), repeat(繰り返し):止めない限り無限, easing(イージング):線形(イージングしない)-->
         
