--- a/t7s6th/index.html
+++ b/t7s6th/index.html
@@ -16,6 +16,8 @@
       <img id="niko" src="mainniko.png">
       <img id="haru1" src="mainharu1.png">
       <img id="niko1" src="mainniko1.png">
+      <img id="nana" src="mainkotoba.png">
+      <img id="rogo" src="mainrogo.png">
     </a-assets>
     <!-- a-markerのtypeにpatternを設定, 作ったpattファイルをurlにを指定 -->
     <a-marker type="pattern" url="pattern-marker.patt">
@@ -27,6 +29,8 @@
         <a-image src="#niko" position="0 0.5 0" width="2" height="2" rotation="-90 0 0"></a-image>
         <a-image src="#haru1" position="0 0.55 0" width="2" height="2" rotation="-90 0 0"></a-image>
         <a-image src="#haru" position="0 0.6 0" width="2" height="2" rotation="-90 0 0"></a-image>
+        <a-image src="#nana" position="0 0.7 0" width="2" height="2" rotation="-90 0 0"></a-image>
+        <a-image src="#rogo" position="0 0.8 0" width="2" height="2" rotation="-90 0 0"></a-image>
         <!-- a-imageを内包するa-entityをy軸周りで360度回転するアニメーション -->
         <!-- dur(間隔):4000(ms), repeat(繰り返し):止めない限り無限, easing(イージング):線形(イージングしない)-->
         
