--- a/t7s6th/index.html
+++ b/t7s6th/index.html
@@ -20,7 +20,7 @@
       <img id="rogo" src="mainrogo.png">
     </a-assets>
     <!-- a-markerのtypeにpatternを設定, 作ったpattファイルをurlにを指定 -->
-    <a-marker type="pattern" url="pattern-QR.patt">
+    <a-marker type="pattern" url="pattern-QR_140954.patt">
       <!-- 赤い立方体を表示 -->
       
       <a-entity>
