--- a/webAR/index.html
+++ b/webAR/index.html
@@ -1,25 +1,47 @@
 <!doctype HTML>
 <html>
-<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
-  <body style='margin : 0px; overflow: hidden;'>
+<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"> </script>
+<script>
+    AFRAME.registerComponent('registerevents', {
+        init: function () {
+            var marker = this.el;
+
+            // マーカーを検出したイベントの登録
+            marker.addEventListener('markerFound', function () {
+                var markerId = marker.id;
+                console.log('markerFound', markerId);
+
+                // アニメーションの開始
+                document.querySelector('#haru1' '#haru2' '#haru3').emit('markerfound');
+            });
+
+            // マーカーを見失ったイベントの登録
+            marker.addEventListener('markerLost', function () {
+                var markerId = marker.id;
+                console.log('markerLost', markerId);
+
+                // アニメーションの停止
+                document.querySelector('#haru1' '#haru2' '#haru3').emit('markerlost');
+            });
+        }
+    });
+</script>
+
+<body style="margin : 0px; overflow: hidden;">
     <a-assets>
-	    <video id="ar-video" autoplay loop="true" muted="true" src="haruAR.mp4"></video>
-	  </a-assets>
-	  <!-- デバッグ用の画面表示、VR用のボタンをそれぞれ非表示に -->
+          <video id="haru1"  muted="true" src="haruoku2.mp4"></video>
+          <video id="haru2"  muted="true" src="harunaka2.mp4"></video>
+          <video id="haru3"  muted="true" src="harutemae2.mp4"></video>
+             </a-assets>
     <a-scene embedded arjs="debugUIEnabled:false;" vr-mode-ui="enabled: false">
-      <!-- 今回作成した『.patt』ファイルを読み込む -->
-      <a-marker type='pattern' url='pattern-marker.patt'>
-	      <a-video src="#ar-video" width="2.6" height="1.4" position="0 0 0" rotation="270 0 0" play="true"></a-video>
-      </a-marker>
-      <a-entity camera></a-entity>
+        <a-marker type="pattern" url="pattern-marker.patt" registerevents>
+           <a-video src="#haru1" width="2.6" height="1.4" position="0 0 0.5" rotation="270 0 0" bigin="markerfound" end="markerlost"></a-video>
+           <a-video src="#haru2" width="2.6" height="1.4" position="0 0 0.75" rotation="270 0 0" bigin="markerfound" end="markerlost"></a-video>
+           <a-video src="#haru3" width="2.6" height="1.4" position="0 0 1" rotation="270 0 0" bigin="markerfound" end="markerlost"></a-video>
+        </a-marker>
+        <a-entity camera></a-entity>
     </a-scene>
-    
-    <script>
-      window.addEventListener('click', function () {
-      var v = document.querySelector('#ar-video');
-      v.play();
-      });
-    </script>
-  </body>
+</body>
+
 </html>
