--- a/myWebAR_MMD-master/index.html
+++ b/myWebAR_MMD-master/index.html
@@ -8,7 +8,7 @@
     
     <!-- AR-->
     <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"> </script>
     <script>THREEx.ArToolkitContext.baseURL = 'https://jeromeetienne.github.io/AR.js/three.js/'</script>
 
     <!-- miku miku-->
